# voidsong

./: AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  Justfile  README.md  biome.json  bun.lockb  cliff.toml  package.json  tsconfig.json
.cargo/: config.toml
.github/: renovate.json
.github/workflows/: release.yml
scripts/: build.ts
src/: cli.ts  lib.rs  main.rs
src/handlers/: random_humor_handler.rs  random_media_handler.rs  random_trivia_handler.rs
src/handlers/biome/: handler.ts
src/handlers/eslint_prettier/: handler.ts
src/routes/: random_route.rs  root.rs
src/services/: runtime-manager.ts
src/utils/: response.rs  state.rs  url.rs
