[package]
name = "voidsong"
version = "1.1.0"
edition = "2024"
rust-version = "1.85"
publish = false

[[bin]]
name = "voidsong"
path = "src/main.rs"

[dependencies]
axum = "0.8.8"
bytes = "1.11.1"
dotenvy = "0.15.7"
futures-util = "0.3.32"
reqwest = { version = "0.13.2", features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = [
    "normalize-path",
    "trace",
    "compression-full",
] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[profile.dev]
incremental = true
opt-level = 0
debug = true