[package]
name = "voidsong"
version = "1.1.0"
edition = "2024"
rust-version = "1.85"
publish = false

[[bin]]
name = "voidsong"
path = "src/main.rs"

[dependencies]
axum = "0.8.8"
bytes = "1.11.1"
dotenvy = "0.15.7"
futures-util = "0.3.32"
reqwest = { version = "0.13.2", features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = [
    "normalize-path",
    "trace",
    "compression-full",
] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[workspace.lints.rust]
# Use '#[allow(unsafe_code)]' and a mandatory 'Safety' comment
# explaining why the invariants hold, if unsafe usage is necessary.
unsafe_code = "deny"

# Prevents the accidental ignoring of 'Result' or 'Future' types,
# which often leads to silent failures or dropped async tasks.
unused_must_use = "warn"

# Keeps the dependency tree lean to improve compile times and
# binary size. If a crate isn't used, it shouldn't be in the manifest.
unused_crate_dependencies = "warn"

[workspace.lints.clippy]
# Prevents runtime crashes. Use 'match', 'if let', or '.get()'.
# Note: Usually allowed in 'mod tests' or 'benches' for brevity via:
# #![allow(clippy::unwrap_used, clippy::expect_used, clippy::panic)]
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"

# Forces clarity between deep and shallow clones. Use 'Arc::clone(&ptr)'
# to make it explicit that you are just incrementing a reference count.
clone_on_ref_ptr = "warn"

# Huge enums or futures bloat the stack and degrade performance.
# Alternative: Wrap large variants or state machines in 'Box::pin' or 'Box'.
large_futures = "warn"
large_enum_variant = "warn"

# Discourages 'user::UserAccount' in favor of 'user::Account'.
# Shorter names are easier to compose and read in a module-qualified context.
module_name_repetitions = "warn"

# Prevents shipping temporary code or placeholders to production.
# Use these only during local development; they must be resolved before merging.
todo = "warn"
dbg_macro = "warn"

# Encourages efficient heap usage. Avoid 'Rc<String>' or 'Rc<Vec<T>>'
# in favor of 'Rc<str>' or 'Rc<[T]>' to eliminate a double indirection.
rc_buffer = "warn"

# Indexing (arr[i]) is a hidden panic point.
# Use '.get(i)' for safe access or use iterators to eliminate bounds checks entirely.
indexing_slicing = "warn"

# Warns if a function returns Result/Option but never fails.
unnecessary_wraps = "warn"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 4
strip = true
panic = "abort"
overflow-checks = true

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"

[profile.test]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2